--- a/portfolio.html
+++ b/portfolio.html
@@ -17,10 +17,10 @@
 					</ul>
 				</div>
 			</header>
-	<div class="profile" class="main">
+	<div class="profile main">
 		<h1 class="teal">Portfolio</h1>
 		<img class="pic" src= "assets/images/stock.jpg">
-		<div class="box1"> RPG Game</div>
+		<div class="box1">RPG Game</div>
 		<img class="pic" src= "assets/images/dog.jpg">
 		<div class="box2"> Chat Bot </div>
 		<img class="pic" src= "assets/images/smile.jpg">
