--- a/portfolio.html
+++ b/portfolio.html
@@ -17,6 +17,7 @@
 					</ul>
 				</div>
 			</header>
+<div class="content">	
 	<div class="profile main">
 		<h1 class="teal">Portfolio</h1>
 		<img class="pic" src= "assets/images/stock.jpg">
@@ -42,10 +43,10 @@
 				<img class="contact" src="assets/images/stack.png">
 			</a>	
 	</div>
-
-	</body>
-	
+</div>
 	<footer>
 		Abtin Ravanipour Copyright 2017
 	</footer>
+	</body>
+
 </html>
