--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,8 @@
 					</ul>
 				</div>
 		</header>
-	<div class="profile" class="main">
+<div class="content">
+	<div class="profile main">
 		<h1 class="teal"> Contact </h1>
 			<form>
 				  <div class="fontreg">Full Name:</div>
@@ -49,5 +50,6 @@
 	<footer>
 		Abtin Ravanipour Copyright 2017
 	</footer>
+</div>
 	</body>
 </html>
